--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
             "label": "DEBUG build",
             "command": "make -DDEBUG all -j",
             "options": {
-                "cwd": "${workspaceFolder}/Source_Code"
+                "cwd": "${workspaceFolder}"
             }
         },
         {
@@ -14,7 +14,7 @@
             "label": "RELEASE build",
             "command": "make all -j",
             "options": {
-                "cwd": "${workspaceFolder}/Source_Code"
+                "cwd": "${workspaceFolder}"
             },
             "group": {
                 "kind": "build",
@@ -26,7 +26,7 @@
             "label": "flash",
             "command": "make flash -j",
             "options": {
-                "cwd": "${workspaceFolder}/Source_Code"
+                "cwd": "${workspaceFolder}"
             },
             "problemMatcher": []
         }
